--- a/index.html
+++ b/index.html
@@ -68,12 +68,6 @@
     let users = JSON.parse(localStorage.getItem('users')) || [];
     let isRegistering = true;
 
-    // Nếu từng chuyển sang chế độ đăng nhập trước đó, lưu lại
-    if (localStorage.getItem('authMode') === 'login') {
-        isRegistering = false;
-    }
-
-    // Toggle giữa đăng ký / đăng nhập
     function toggleForm() {
         isRegistering = !isRegistering;
         localStorage.setItem('authMode', isRegistering ? 'register' : 'login');
@@ -86,24 +80,33 @@
         document.getElementById('submit-btn').textContent = buttonText;
         document.getElementById('toggle-msg').textContent = toggleText;
 
-        // Ẩn hiện trường thông tin
-        document.getElementById('name').style.display = isRegistering ? 'block' : 'none';
-        document.getElementById('class').style.display = isRegistering ? 'block' : 'none';
+        const nameInput = document.getElementById('name');
+        const classInput = document.getElementById('class');
+
+        if (isRegistering) {
+            nameInput.style.display = 'block';
+            classInput.style.display = 'block';
+            nameInput.required = true;
+            classInput.required = true;
+        } else {
+            nameInput.style.display = 'none';
+            classInput.style.display = 'none';
+            nameInput.required = false;
+            classInput.required = false;
+        }
+
+        document.getElementById('message').textContent = '';
     }
 
-    // Gán sự kiện cho nút chuyển đổi
     document.getElementById('toggle-msg').addEventListener('click', toggleForm);
 
-    // Gọi khi trang vừa load
     window.onload = function () {
-        // Gọi đúng theo trạng thái lưu trước đó
-        if (!isRegistering) {
+        if (localStorage.getItem('authMode') === 'login') {
+            isRegistering = false;
             toggleForm();
         }
-        document.getElementById('message').textContent = '';
     };
 
-    // Xử lý form
     document.getElementById('auth-form').addEventListener('submit', function (e) {
         e.preventDefault();
         const name = document.getElementById('name').value;
@@ -124,13 +127,13 @@
             const user = users.find(u => u.username === username && u.password === password);
             if (user) {
                 localStorage.setItem('currentUser', JSON.stringify(user));
-                window.location.href = 'dashboard.html'; // Trang chính sau khi đăng nhập
+                window.location.href = 'dashboard.html';
             } else {
                 document.getElementById('message').textContent = 'Sai tên đăng nhập hoặc mật khẩu!';
             }
         }
     });
 </script>
-
+    
 </body>
 </html>
