--- a/dashboard.html
+++ b/dashboard.html
@@ -106,7 +106,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="https://scontent.fhan14-4.fna.fbcdn.net/v/t39.30808-6/461317799_501716405997677_4170045446274099739_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=p-EO0A3cDskQ7kNvwHEgPim&_nc_oc=AdmgBpdTieLtL8AlxnRa4_Y8LWxTubEg9T0NbLfqTLi0iSYFCvHtR2VHFiGwHKK964_tIvZKsCQ_URFBhWEHBR8T&_nc_zt=23&_nc_ht=scontent.fhan14-4.fna&_nc_gid=TSL-gYuvUYe_Z3E3P36SvQ&oh=00_AfFMYl9S_m_5BB9qk5cL3qo-jtvmz8YLo_xCHsSr0PzxAA&oe=6806C400" alt="Logo" class="logo">
             <h1>Fanpage Trường THPT Quang Trung</h1>
         </div>
     </header>
